--- a/foundations/cascade/01-cascade-fix/style.css
+++ b/foundations/cascade/01-cascade-fix/style.css
@@ -3,25 +3,21 @@ body {
 }
 
 .para,
-.small-para {
+.small-para
+ {
   color: hsl(0, 0%, 0%);
   font-weight: 800;
+}
+
+/* swapped around */
+.para { 
+  font-size: 22px;
 }
 
 .small-para {
   font-size: 14px;
   font-weight: 800;
 }
-
-.para {
-  font-size: 22px;
-}
-
-.confirm {
-  background: green;
-  color: white;
-  font-weight: bold;
-} 
 
 .button {
   background-color: rgb(255, 255, 255);
@@ -29,14 +25,27 @@ body {
   font-size: 20px;
 }
 
-.child {
-  color: rgb(0, 0, 0);
-  font-weight: 800;
-  font-size: 14px;
-}
+/* moved to near the bottom to make button green */
+
+.confirm {
+  background: green;
+  color: white;
+  font-weight: bold;
+} 
 
 div.text {
   color: rgb(0, 0, 0);
   font-size: 22px;
   font-weight: 100;
+}
+
+.child {
+  color: rgb(0, 0, 0);
+  font-weight: 800;
+  font-size: 14px;
+}
+.text.child
+{
+  font-size: 15px;
+  font-weight: bold;
 }
